# KSEB-chat-bot-server

./: .gitignore  README.md  apply_user_styles.py  apply_user_styles_absolute.py  apply_user_styles_final.py  pyproject.toml  style_inspector.py  style_inspector_v2.py
src/: main.py
src/agent/: agent.py
src/agent/templates/pptx/: default_template.pptx
src/agent/tools/: arxiv_tool.py  generate_ppt_tool.py  generate_report_tool.py  schedule_tool.py  search.py  semantic_scholar_tool.py  web_reader.py  web_search.py  web_search_tool.py
src/core/: config.py  security.py
src/ksebj_chat_bot_server/: main.py
src/ksebj_chat_bot_server/agent/: agent.py
src/ksebj_chat_bot_server/agent/tools/: search.py
src/ksebj_chat_bot_server/core/: config.py  security.py
src/ksebj_chat_bot_server/routers/: chatbot.py
src/ksebj_chat_bot_server/schemas/: chat.py
src/ksebj_chat_bot_server/services/: chatbot_service.py  schedule_service.py
src/routers/: chatbot.py  chatbot_router.py  download_router.py
src/schemas/: chat.py  chatbot_schema.py
src/services/: chatbot_service.py
src/templates/docx/reports/: kseb_final_template.docx  professional_report_template.docx  report_template.docx
src/templates/pptx/: default_template.pptx
src/utils/: api_client.py
templates/docx/reports/: professional_report_template.docx  report_template.docx
